--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@ a {
 li {
     list-style: none;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
