--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ a {
 li {
     list-style: none;
 }
+p {
+    color: #222;
+    font-weight: 300;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
