--- a/src/components/cover/Cover.css
+++ b/src/components/cover/Cover.css
@@ -55,18 +55,59 @@
     padding-left: 50px;
 }
 h2.slider-big-text {
-    font-size: 75px;
-    line-height: 75px;
+    font-size: clamp(50px, 8vw, 75px);
+    line-height: clamp(50px, 8vw, 75px);
 }
 p.slider-desc {
     font-weight: 300;
     padding-bottom: 15px;
+    color: white;
 }
 button.cover-btn {
     border: none;
     padding: 15px 50px;
     font-size: 18px;
-    mix-blend-mode: screen;
     font-weight: 600;
     cursor: pointer;
+}
+
+@media (max-width: 1100px) {
+    .slider .container {
+        position: relative;
+    }
+    .slider-left {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        z-index: 1;
+    }
+    .slider-content {
+        max-width: 550px;
+    }
+    .slider-right {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        right: 0;
+        text-align: right;
+    }
+}
+@media (max-width: 900px) {
+    .slider-left {
+        background-color: #0000008c;
+    }
+}
+@media (max-width: 500px) {
+    .arrows {
+        justify-content: center;
+        align-items: flex-end;
+        padding-bottom: 12px;
+    }
+    .slider-left {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    h1.slider-title {
+        font-size: 18px;
+    }
 }
