--- a/src/components/newProducts/NewProducts.css
+++ b/src/components/newProducts/NewProducts.css
@@ -27,3 +27,21 @@
     background-color: #444;
     color: white;
 }
+
+@media (max-width: 1100px) {
+    .new-products .products-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (max-width: 800px) {
+    .new-products .products-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 500px) {
+    .new-products .products-container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 0;
+        grid-row-gap: 20px;
+    }
+}
