--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -34,3 +34,20 @@
     padding: 10px 30px;
     cursor: pointer;
 }
+@media (max-width: 1100px) {
+    .products .products-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (max-width: 800px) {
+    .products .products-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 500px) {
+    .products .products-container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 0;
+        grid-row-gap: 20px;
+    }
+}
