--- a/src/components/cartSidebar/CartSidebar.css
+++ b/src/components/cartSidebar/CartSidebar.css
@@ -1,15 +1,32 @@
+.cart-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1000;
+    background-color: #d9d9d9a1;
+    display: none;
+}
+.cart-modal-overlay.true {
+    display: block;
+}
 .cart-sidebar {
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 100000;
-    width: 100%;
     max-width: 400px;
     background-color: #333333;
+    width: 100%;
     height: 100%;
     color: white;
+    z-index: 100000;
+    transform: translateX(400px);
+    transition: 0.5s;
 }
-
+.cart-sidebar.true {
+    transform: translateX(0px);
+}
 .cart-sidebar-container {
     padding: 0 30px;
     height: 100%;
@@ -27,12 +44,15 @@
     align-items: center;
     background-color: #333;
     z-index: 10000000;
+    cursor: pointer;
 }
-
+.cart-sidebar-header:hover svg {
+    color: #fff;
+}
 .cart-sidebar-header svg {
     font-size: 37px;
     color: #b9b9b9;
-    cursor: pointer;
+    transition: 0.3s;
 }
 .cart-sidebar-scrollable-container {
     height: calc(100vh - 250px);
@@ -72,9 +92,43 @@
 .cart-sidebar-product-quantity-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-weight: 200;
     font-size: 15px;
 }
+.product-quantity-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.product-quantity-container > span {
+    display: block;
+    margin-bottom: 2px;
+}
+.product-quantity-btns {
+    display: flex;
+}
+
+.product-quantity-btns span {
+    display: flex;
+    cursor: pointer;
+    color: #ddd;
+}
+
+.product-quantity-btns input {
+    width: 35px;
+    height: 22px;
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    color: #ddd;
+    margin-top: 2px;
+}
+.product-quantity-btns input:focus {
+    outline: none;
+    color: white;
+}
+
 .cart-sidebar-product-name-container {
     display: flex;
     justify-content: space-between;
