--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,11 +1,14 @@
 header {
     background-color: white;
-    padding: 21px 0;
     color: #686868;
     box-shadow: 0 0 3px #ddd;
     position: sticky;
     top: 0;
     z-index: 999;
+}
+header.true {
+    background-color: #444 !important;
+    color: white;
 }
 header .container {
     display: grid;
@@ -13,9 +16,13 @@ header .container {
     align-items: center;
     justify-content: center;
     position: relative;
+    height: 74px;
 }
-.toggle {
-    padding-top: 7px;
+.toggle span {
+    display: flex;
+}
+.toggle svg {
+    font-size: 32px;
 }
 .logo {
     text-align: center;
@@ -36,5 +43,29 @@ header nav {
 }
 .nav-item span,
 .toggle span {
+    cursor: pointer;
+}
+.nav-item span {
+    display: flex;
+}
+nav svg {
+    font-size: 23px;
+}
+.nav-item.shopping-cart {
+    position: relative;
+}
+.shopping-cart-badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: #5953bb;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 12px;
     cursor: pointer;
 }
