--- a/src/pages/singleProduct/SingleProduct.css
+++ b/src/pages/singleProduct/SingleProduct.css
@@ -25,8 +25,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    padding: 10px;
     color: #222;
+    font-size: 27px;
 }
 .atc-name-heart .product-name {
     font-weight: 400;
@@ -82,6 +82,7 @@ button.add-to-cart {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    font-size: 25px;
 }
 
 @media (max-width: 1000px) {
