--- a/src/components/ui/authModal/AuthModal.css
+++ b/src/components/ui/authModal/AuthModal.css
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .auth-modal.false {
   display: none;
 }
@@ -21,6 +22,15 @@
   width: 100%;
   max-width: 520px;
   overflow-y: auto;
+  animation: modalAnimation 0.5s forwards;
+}
+@keyframes modalAnimation {
+  0% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .auth-modal-tabs-container {
